// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsListItem should not render the caption since accountLogin is undefined 1`] = `
<div
  className="styles__c-card___YgP7B u-flex u-flex-justify-between u-flex-items-center u-c-pointer u-maw-100"
  onClick={[MockFunction]}
>
  <div
    className="u-flex-grow-1 u-flex-shrink-1 u-ov-hidden u-mr-1"
  >
    <ForwardRef
      className="u-ellipsis"
      ellipsis={false}
      tag="div"
    >
      account-1
    </ForwardRef>
  </div>
  <withI18n(Status)
    konnector={
      Object {
        "name": "test-konnector",
        "vendor_link": "test konnector link",
      }
    }
    trigger={Object {}}
  />
</div>
`;

exports[`AccountsListItem should render the caption since accountName !== login 1`] = `
<div
  className="styles__c-card___YgP7B u-flex u-flex-justify-between u-flex-items-center u-c-pointer u-maw-100"
  onClick={[MockFunction]}
>
  <div
    className="u-flex-grow-1 u-flex-shrink-1 u-ov-hidden u-mr-1"
  >
    <ForwardRef
      className="u-ellipsis"
      ellipsis={false}
      tag="div"
    >
      myAccountName
    </ForwardRef>
    <ForwardRef
      ellipsis={false}
      tag="div"
    >
      <ForwardRef
        className="u-ellipsis"
        ellipsis={false}
        tag="div"
      >
        mylogin
      </ForwardRef>
    </ForwardRef>
  </div>
  <withI18n(Status)
    konnector={
      Object {
        "name": "test-konnector",
        "vendor_link": "test konnector link",
      }
    }
    trigger={Object {}}
  />
</div>
`;
